run `composer dump-autoload --optimize`

--- a/composer.optimized/composer.json
+++ b/composer.optimized/composer.json
@@ -22,5 +22,8 @@
 	},
     "require-dev": {
         "nette/tester": "@dev"
+    },
+    "autoload": {
+    	"classmap": ["libs/nette/nette/Nette"]
     }
 }
